--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -73,7 +73,7 @@
                   </figure>
                 </div>
                 <div class="card-content">
-                  <p class="title">John Smith</p>
+                  <p class="title" style="color:green">John Smith</p>
                   <div class="content">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Phasellus nec iaculis mauris.
